--- a/app/views/creating_links.erb
+++ b/app/views/creating_links.erb
@@ -2,8 +2,13 @@
 <form action="/links" method="post">
   <label for="url"> URL </label>
   <input type="text" name="url">
+
   <label for="title"> Title </label>
   <input type="text" name="title">
+
+  <label for="tags"> Tags </label>
+  <input type="text" name="tags">
+
   <label for="SaveLink">Save Link</label>
   <input type="submit" value="Save Link"/>
 </form>
